# Rudex

./: .gitignore  Cargo.toml
data/: document1.txt  document2.txt
data/test/: document2.txt  document3.txt  document4.txt
src/: index.rs  main.rs  searcher.rs  sorting.rs
src/indexing/: index.rs  mod.rs  postlist.rs
src/searching/: searcher.rs
src/utils/: load_and_save.rs  mod.rs  preprocess_text.rs
