[package]
name = "t1"
version = "0.1.0"
authors = ["Meruem"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
flexbuffers = "0.2.2"
serde_derive = "1.0.125"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v5"] }

